cursor:pointer added to the button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div id="reviews"></div>
                     <div id="show-message"></div>
-                    <button class="main-button" id="add-review-button"><a href="#add-review" onclick="createReviewWindow()">Add a Review</a></button>
+                    <button class="main-button" id="add-review-button" onclick="createReviewWindow()">Add a Review</button>
                     <div id="review-window"></div>
                     <button type="submit" id="review-submit" class="main-button" onclick="submitReview()">Add Review</button>
                 </div>
